; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_core.c_r_core_anal_read_at.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_core.c_r_core_anal_read_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r_anal_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.r_anal_t*, i32, i32*, i32)* @r_core_anal_read_at to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @r_core_anal_read_at(%struct.r_anal_t* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.r_anal_t*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.r_anal_t* %0, %struct.r_anal_t** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.r_anal_t*, %struct.r_anal_t** %5, align 8
  %10 = getelementptr inbounds %struct.r_anal_t, %struct.r_anal_t* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @r_io_read_at(i32 %12, i32 %13, i32* %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @r_io_read_at(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
